# llm-quant-diagnostics

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: note.md  report.md  research_gap_plan.md  understanding.md
notebooks/: awq_diagnostic.ipynb
presentation/: interview_cheatsheet.md  narrative_0to100.md
results/: alpha_study_Qwen2.5-0.5B.json  alpha_study_Qwen2.5-1.5B.json  cross_model_summary.md  diagnostic_Qwen2.5-0.5B.json  diagnostic_Qwen2.5-1.5B.json  perplexity_Qwen2.5-0.5B_3bit.json  perplexity_Qwen2.5-0.5B_4bit.json  perplexity_Qwen2.5-1.5B_3bit.json  perplexity_Qwen2.5-1.5B_4bit.json
scripts/: alpha_study.py  compare_models.py  perplexity_eval.py  plot_bit_error.py  plot_perplexity.py  run_diagnostic.py
src/awq_diag/: __init__.py  analysis.py  cli.py  config.py  data.py  hooks.py  model_utils.py  pipeline.py  plotting.py  quant.py
tests/: test_quant.py
